--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -146,8 +146,8 @@ avatar:
 # Disable all banner image
 disable_top_img: true
 
-# The banner image of home pagehttps://LinMoste.github.io/picx-images-hosting/wall/TUAPI-EEES-CC-0147353712.5fkiei3nvd.webp
-index_img: "background: url(https://img.maodeyu.fun/wall/TUAPI-EEES-CC-0147353712.5fkiei3nvd.webp) top / cover no-repeat" # "background: url() top / cover no-repeat"
+# The banner image of home page https://LinMoste.github.io/picx-images-hosting/wall/TUAPI-EEES-CC-0147353712.5fkiei3nvd.webp
+index_img: "background: url(https://img.maodeyu.fun/wall/TUAPI-EEES-C) top / cover no-repeat" # "background: url() top / cover no-repeat"
 
 # If the banner of page not setting, it will show the top_img
 default_top_img: true
@@ -314,12 +314,12 @@ addtoany:
 comments:
   # Up to two comments system, the first will be shown as default
   # Choose: Valine/Waline/Twikoo/Artalk
-  use: # Twikoo/Waline
+  use: Twikoo
   text: true # Display the comment name next to the button
   # lazyload: The comment system will be load when comment element enters the browser's viewport.
   # If you set it to true, the comment count will be invalid
   lazyload: false
-  count: false # Display comment count in post's top_img
+  count: true # Display comment count in post's top_img
   card_post_count: false # Display comment count in Home Page
 
 # valine
@@ -360,7 +360,7 @@ waline:
 # Twikoo
 # https://github.com/imaegoo/twikoo
 twikoo:
-  envId:
+  envId: https://comment.15211314.xyz/twikoo
   region:
   visitor: false
   option:
